--- a/css/case_study.css
+++ b/css/case_study.css
@@ -11,6 +11,7 @@ Media Breakpoints
 
 :root {
   --case-study-image-max-height: 300px;
+  --case-study-image-max-height-large: 650px;
   --case-study-image-max-width: var(--global-width);
   --case-study-p-padding: 50px;
 }
@@ -26,11 +27,16 @@ Media Breakpoints
   flex-direction: column-reverse;
 }
 
-.case-study__images {
+.case-study__images, .case-study__images-large {
   text-align: center;
 }
 .case-study__images img {
   max-height: var(--case-study-image-max-height);
+  max-width: var(--case-study-image-max-width);
+}
+
+.case-study__images-large img {
+  max-height: var(--case-study-image-max-height-large);
   max-width: var(--case-study-image-max-width);
 }
 
