Made sure to remove the navbar's clear background if there is no hero section with the "home" id.

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,14 +1,14 @@
 :root {
     --primary-color: #424254;
-    --accent-color: #ffcd8b;
-    --accent-color-1: #f8a83f;
+    --accent-color: #FFCD8D;
+    --accent-color-1: #F8A83F;
     --dark-text: #212121;
     --secondary-text: #757575;
     --light-text: #FAFAFA;
     --divider-color: #BDBDBD;
     --background-color-dark: #333333;
     --background-color: #FAFAFA;
-    --background-color-1: #d6d6d6;
+    --background-color-1: #D6D6D6;
     --background-color-2: #505050;
 }
 
