Created contact form using formspree

--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,40 @@ blockquote {
   #contact .btn-group .btn:not(:last-of-type) { margin: 0 var(--btn-group-separation) 0 0; }
 }
 
+/* Contact Form */
 
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  text-align: left;
+  margin-top: 20px;
+  width: var(--global-width);
+  max-width: 800px;
+}
+
+.contact-form input {
+  border-radius: var(--border-radius);
+  font: 14px var(--font-style__standard);
+  margin-bottom: 20px;
+  padding: 14px;
+}
+
+.contact-form textarea {
+  border-radius: var(--border-radius);
+  font: 14px var(--font-style__standard);
+  margin-bottom: 20px;
+  min-height: 100px;
+  padding: 14px;
+}
+
+.contact-form button {
+  width: 100%;
+}
+
+.contact-form button:hover {
+  cursor: pointer;
+}
 
 
 /* Footer */
